--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,6 +18,11 @@ pipeline {
                 println('**** Dependencies Installed ****')
             }
         }
+        stage('Install Playwright Browsers') {
+            steps {
+                bat 'npx playwright install-deps'
+            }
+        }
 
         stage('Run Playwright tests') {
             steps {
