fix agent in pipeline

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,5 +1,9 @@
 pipeline {
-    agent any
+    agent { 
+        docker { 
+            image 'mcr.microsoft.com/playwright:v1.44.1-jammy' 
+               } 
+          }
 
     stages {
         stage('Checkout Code') {
