--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,12 +20,13 @@ pipeline {
             steps {
                 println('**** Installing dependencies ****')
                 bat 'npm install'
+                bat 'npx playwright install --with-deps'
                 println('**** Dependencies Installed ****')
             }
         }
         stage('Install Playwright Browsers') {
             steps {
-                bat 'npx playwright install-deps'
+                bat 'npx playwright install --with-deps'
             }
         }
 
