--- a/JenkinsFile
+++ b/JenkinsFile
@@ -37,11 +37,16 @@ pipeline {
             }
         }
 
-        stage('Publish Test Results') {
+        stage('Generate Allure Report') {
             steps {
                 println('**** Generating report ****')
-                //junit '**/playwright-report/*.xml'
-                junit 'test-results/results.xml'
+                bat 'npx allure generate ./allure-results --clean -o ./allure-report'
+            }
+        }
+
+        stage('Publish Test Results') {
+            steps {
+                allure includeProperties: false, jdk: '', reportBuildPolicy: 'ALWAYS', results: [[path: 'allure-results']]
             }
         }
     }
@@ -49,7 +54,7 @@ pipeline {
     post {
         always {
             println('**** Archive test results ****')
-            archiveArtifacts artifacts: '**/playwright-report/*.xml', allowEmptyArchive: true
+            archiveArtifacts artifacts: 'allure-report/**', allowEmptyArchive: true
         }
     }
 }
