--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,7 +20,6 @@ pipeline {
             steps {
                 println('**** Installing dependencies ****')
                 bat 'npm install'
-                bat 'npx playwright install --with-deps'
                 println('**** Dependencies Installed ****')
             }
         }
@@ -33,6 +32,7 @@ pipeline {
         stage('Run Playwright tests') {
             steps {
                 println('**** Trigger Tests ****')
+                bat 'mkdir -p allure-results'
                 bat 'npx playwright test --project=Chrome'
             }
         }
